<resources>
    <string name="app_name">Converter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_a_text">Enter a text</string>
    <string name="radiobutton">RadioButton</string>
    <string name="enter_value">Enter Value</string>
    <string name="meter_to_centimeter">Meter To Centimeter</string>
    <string name="centimeter_to_meter">Centimeter To Meter</string>
    <string name="kilometer_to_meter">Kilometer To Meter</string>
    <string name="meter_to_kilometer">Meter To Kilometer</string>
    <string name="inch_to_feet">Inch To Feet</string>
    <string name="feet_to_inch">Feet To Inch</string>
    <string name="convert">Convert</string>
    <string name="c">Cancel</string>
</resources>