<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".MainActivity"
    tools:ignore="RtlSymmetry">
    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/enter_value"
        android:background="@color/white"
        android:inputType="numberDecimal"
        android:autofillHints="" />




    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/meterToCentimeter"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:background="@color/white"
            android:text="@string/meter_to_centimeter"
            android:layout_marginBottom="20dp"
            />
        <RadioButton
            android:id="@+id/CentimeterToMeter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/white"
            android:background="@color/design_default_color_background"
            android:text="@string/centimeter_to_meter"

            />


        <RadioButton
            android:id="@+id/KilometerToMeter"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/kilometer_to_meter"
            />
        <RadioButton
            android:id="@+id/MeterToKilometer"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/meter_to_kilometer"
            />
        <RadioButton
            android:id="@+id/InchToFoot"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/inch_to_feet"
            />
        <RadioButton
            android:id="@+id/FootToInch"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/feet_to_inch"
            />

    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/Button"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:text="@string/convert"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@color/teal_200"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/CancelButton"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/c"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


</LinearLayout>